--- a/BedrockBoot/MainWindow.xaml
+++ b/BedrockBoot/MainWindow.xaml
@@ -4,9 +4,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dev="using:DevWinUI"
     xmlns:local="using:BedrockBoot"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    x:Name="MainWindow"
+    x:Name="MWindow"
     Title="BedrockBoot"
     mc:Ignorable="d">
 
@@ -14,5 +15,16 @@
         <MicaBackdrop />
     </Window.SystemBackdrop>
 
-    <Grid />
+    <Grid>
+        <TitleBar
+            x:Name="AppTitleBar"
+            Title="{x:Bind dev:ProcessInfoHelper.ProductName}"
+            Height="42"
+            VerticalAlignment="Top"
+            Canvas.ZIndex="1"
+            IsBackButtonEnabled="False"
+            IsBackButtonVisible="False"
+            IsPaneToggleButtonVisible="False"
+            Subtitle="{x:Bind dev:ProcessInfoHelper.VersionWithPrefix}" />
+    </Grid>
 </Window>
