--- a/BedrockBoot/MainWindow.xaml
+++ b/BedrockBoot/MainWindow.xaml
@@ -27,6 +27,7 @@
             IsPaneToggleButtonVisible="True"
             IsTitleBarAutoPaddingEnabled="True"
             IsSettingsVisible="False"
+            SelectionChanged="NavView_SelectionChanged"
             OpenPaneLength="260"
             PaneDisplayMode="Auto">
             <NavigationView.Resources>
