--- a/BedrockBoot/Pages/SettingsPage.xaml
+++ b/BedrockBoot/Pages/SettingsPage.xaml
@@ -5,9 +5,52 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:dev="using:DevWinUI"
-    xmlns:local="using:BedrockBoot.Pages"
+    xmlns:local="using:BedrockBoot"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Vertical" />
+    <ScrollView
+        Margin="{ThemeResource ContentPageMargin}"
+        Padding="{ThemeResource ContentPagePadding}"
+        HorizontalAlignment="Stretch"
+        VerticalScrollBarVisibility="Auto">
+        <StackPanel
+            Margin="10"
+            dev:PanelAttach.ChildrenTransitions="Default"
+            Spacing="5">
+            <dev:SettingsCard
+                Command="{x:Bind local:App.Current.NavService.NavigateToCommand}"
+                CommandParameter="{dev:NavigationParameter PageType=views:GeneralSettingPage,
+                                                           BreadCrumbHeader='General'}"
+                Description="更改应用设置"
+                Header="通用"
+                HeaderIcon="{dev:FontIcon Glyph=&#xE713;}"
+                IsClickEnabled="True" />
+            <dev:SettingsCard
+                Command="{x:Bind local:App.Current.NavService.NavigateToCommand}"
+                CommandParameter="{dev:NavigationParameter PageType=views:ThemeSettingPage,
+                                                           BreadCrumbHeader='Appearance &amp; behavior'}"
+                Description="探索自定义应用程序外观和行为的不同方法。您可以更改材料、主题和更多选项，以适应您的风格和偏好。"
+                Header="外观"
+                HeaderIcon="{dev:FontIcon Glyph=&#xE771;}"
+                IsClickEnabled="True" />
+            <dev:SettingsCard
+                Command="{x:Bind local:App.Current.NavService.NavigateToCommand}"
+                CommandParameter="{dev:NavigationParameter PageType=views:AppUpdateSettingPage,
+                                                           BreadCrumbHeader='Update App'}"
+                Description="检查更新"
+                Header="更新"
+                HeaderIcon="{dev:FontIcon Glyph=&#xE895;}"
+                IsClickEnabled="True" />
+            <dev:SettingsCard
+                Command="{x:Bind local:App.Current.NavService.NavigateToCommand}"
+                CommandParameter="{dev:NavigationParameter PageType=views:AboutUsSettingPage,
+                                                           BreadCrumbHeader='About us'}"
+                Description="关于 UselessBox 以及开发者"
+                Header="关于"
+                HeaderIcon="{dev:FontIcon Glyph=&#xE946;}"
+                IsClickEnabled="True" />
+
+        </StackPanel>
+    </ScrollView>
 </Page>
