--- a/BedrockBoot/Pages/SettingsPage.xaml
+++ b/BedrockBoot/Pages/SettingsPage.xaml
@@ -7,6 +7,8 @@
     xmlns:dev="using:DevWinUI"
     xmlns:local="using:BedrockBoot"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    dev:BreadcrumbNavigator.IsHeaderVisible="True"
+    dev:BreadcrumbNavigator.PageTitle="设置"
     mc:Ignorable="d">
 
     <ScrollView
