--- a/BedrockBoot/Pages/SettingsPage.xaml
+++ b/BedrockBoot/Pages/SettingsPage.xaml
@@ -19,24 +19,14 @@
         <StackPanel
             Margin="10"
             dev:PanelAttach.ChildrenTransitions="Default"
-            Spacing="5">
-            <dev:SettingsCard
-                Description="更改应用设置"
-                Header="通用"
-                HeaderIcon="{dev:FontIcon Glyph=&#xE713;}"
-                IsClickEnabled="True" />
+            Spacing="4">
             <dev:SettingsCard
                 Description="探索自定义应用程序外观和行为的不同方法。您可以更改材料、主题和更多选项，以适应您的风格和偏好。"
                 Header="外观"
                 HeaderIcon="{dev:FontIcon Glyph=&#xE771;}"
                 IsClickEnabled="True" />
             <dev:SettingsCard
-                Description="检查更新"
-                Header="更新"
-                HeaderIcon="{dev:FontIcon Glyph=&#xE895;}"
-                IsClickEnabled="True" />
-            <dev:SettingsCard
-                Description="关于 UselessBox 以及开发者"
+                Description="关于 BedrockBoot 以及开发者"
                 Header="关于"
                 HeaderIcon="{dev:FontIcon Glyph=&#xE946;}"
                 IsClickEnabled="True" />
