--- a/BedrockBoot/Pages/SettingsPage.xaml
+++ b/BedrockBoot/Pages/SettingsPage.xaml
@@ -12,8 +12,8 @@
     mc:Ignorable="d">
 
     <ScrollView
-        Margin="{ThemeResource ContentPageMargin}"
-        Padding="{ThemeResource ContentPagePadding}"
+        Margin="40,0,40,0"
+        Padding="0"
         HorizontalAlignment="Stretch"
         VerticalScrollBarVisibility="Auto">
         <StackPanel
