--- a/BedrockBoot/MainWindow.xaml
+++ b/BedrockBoot/MainWindow.xaml
@@ -69,7 +69,7 @@
                 <dev:BreadcrumbNavigator x:Name="BreadCrumbNav" />
             </NavigationView.Header>
 
-            <!--NavigationView.MenuItems>
+            <NavigationView.MenuItems>
                 <NavigationViewItem
                     x:Name="HomePageNavItem"
                     Content="主页"
@@ -83,12 +83,7 @@
                     Content="任务"
                     Icon="{dev:FontIcon Glyph=&#xE945;}"
                     Tag="TaskPage" />
-                <NavigationViewItem
-                    x:Name="SettingPageNavItem"
-                    Content="设置"
-                    Icon="{dev:FontIcon Glyph=&#xE713;}"
-                    Tag="SettingPage" />
-            </NavigationView.FooterMenuItems-->
+            </NavigationView.FooterMenuItems>
             <Frame
                 x:Name="NavFrame"
                 Margin="0,0,0,0"
