--- a/BedrockBoot/Pages/DownloadPage.xaml
+++ b/BedrockBoot/Pages/DownloadPage.xaml
@@ -1,38 +1,73 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <Page
     x:Class="BedrockBoot.Pages.DownloadPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BedrockBoot.Pages"
+    xmlns:controls="using:CommunityToolkit.WinUI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:BedrockBoot.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="using:CommunityToolkit.WinUI"
     mc:Ignorable="d">
 
     <Grid>
-        <Grid HorizontalAlignment="Stretch" MaxWidth="1000"
-              Height="80" VerticalAlignment="Top">
-            <BreadcrumbBar x:Name="BreadcrumbBar" FontSize="30" Margin="10,4"
-                           ItemClicked="BreadcrumbBar_ItemClicked">
+        <Grid
+            Height="80"
+            MaxWidth="1000"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Top">
+            <BreadcrumbBar
+                x:Name="BreadcrumbBar"
+                Margin="10,4"
+                FontSize="30"
+                ItemClicked="BreadcrumbBar_ItemClicked">
                 <BreadcrumbBar.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Text="{Binding}" FontSize="30"/>
+                        <TextBlock FontSize="30" Text="{Binding}" />
                     </DataTemplate>
                 </BreadcrumbBar.ItemTemplate>
             </BreadcrumbBar>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5">
-                <FontIcon Glyph="&#xE71C;" Foreground="Gray" FontSize="18"
-                          Margin="4"/>
-                <TextBlock VerticalAlignment="Center" Margin="4"
-                           Foreground="Gray">过滤器</TextBlock>
-                <ComboBox Width="120" Margin="5" x:Name="VersionType" SelectedIndex="0">
+            <StackPanel
+                Margin="5"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                Orientation="Horizontal">
+                <FontIcon
+                    Margin="4"
+                    FontSize="18"
+                    Foreground="Gray"
+                    Glyph="&#xE71C;" />
+                <TextBlock
+                    Margin="4"
+                    VerticalAlignment="Center"
+                    Foreground="Gray">
+                    过滤器
+                </TextBlock>
+
+                <!--ComboBox Width="120" Margin="5" x:Name="VersionType" SelectedIndex="0">
                     <ComboBoxItem>正式版</ComboBoxItem>
                     <ComboBoxItem>预览版</ComboBoxItem>
                     <ComboBoxItem>Beta 版</ComboBoxItem>
-                </ComboBox>
+                DM: 下面是另一种方式
+                </ComboBox-->
+
+                <controls:Segmented
+                    x:Name="VersionType"
+                    Margin="5"
+                    SelectedIndex="0"
+                    SelectionMode="Single">
+                    <controls:SegmentedItem Icon="{ui:FontIcon Glyph=&#xE7FC;}" ToolTipService.ToolTip="正式版" />
+                    <controls:SegmentedItem Icon="{ui:FontIcon Glyph=&#xE8A1;}" ToolTipService.ToolTip="预览版" />
+                    <controls:SegmentedItem Icon="{ui:FontIcon Glyph=&#xEA8D;}" ToolTipService.ToolTip="测试版" />
+                </controls:Segmented>
+
             </StackPanel>
         </Grid>
-        <ScrollViewer HorizontalAlignment="Stretch" Margin="0,80,0,0" MaxWidth="1000">
-            <Frame x:Name="SubPageFrame"></Frame>
+        <ScrollViewer
+            MaxWidth="1000"
+            Margin="0,80,0,0"
+            HorizontalAlignment="Stretch">
+            <Frame x:Name="SubPageFrame" />
         </ScrollViewer>
     </Grid>
 </Page>
