--- a/BedrockBoot/Pages/DownloadPage.xaml
+++ b/BedrockBoot/Pages/DownloadPage.xaml
@@ -10,7 +10,7 @@
     xmlns:ui="using:CommunityToolkit.WinUI"
     mc:Ignorable="d">
 
-    <Grid>
+    <Grid Margin="40,0,40,0" Padding="0">
         <Grid
             Height="80"
             MaxWidth="1000"
