--- a/BedrockBoot/Pages/DownloadPages/VersionsShowPages.xaml
+++ b/BedrockBoot/Pages/DownloadPages/VersionsShowPages.xaml
@@ -5,9 +5,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:dev="using:DevWinUI"
+    xmlns:ui="using:CommunityToolkit.WinUI"
     xmlns:local="using:BedrockBoot.Pages.DownloadPages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:types="using:BedrockBoot.Types"
+    xmlns:types="using:BedrockBoot.Types" xmlns:controls="using:CommunityToolkit.WinUI.Controls"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -22,5 +23,35 @@
         </DataTemplate>
     </Page.Resources>
 
-    <StackPanel x:Name="VersionList" HorizontalAlignment="Stretch" />
+    <Grid>
+        <StackPanel
+            Margin="5"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Orientation="Horizontal">
+            <FontIcon
+                Margin="4"
+                FontSize="18"
+                Foreground="Gray"
+                Glyph="&#xE71C;" />
+            <TextBlock
+                Margin="4"
+                VerticalAlignment="Center"
+                Foreground="Gray">
+                过滤器
+            </TextBlock>
+
+            <controls:Segmented
+                x:Name="VersionType"
+                Margin="5"
+                SelectedIndex="0"
+                SelectionMode="Single">
+                <controls:SegmentedItem Icon="{ui:FontIcon Glyph=&#xE7FC;}" ToolTipService.ToolTip="正式版" />
+                <controls:SegmentedItem Icon="{ui:FontIcon Glyph=&#xE8A1;}" ToolTipService.ToolTip="预览版" />
+                <controls:SegmentedItem Icon="{ui:FontIcon Glyph=&#xEA8D;}" ToolTipService.ToolTip="测试版" />
+            </controls:Segmented>
+
+        </StackPanel>
+        <StackPanel Margin="0,48,0,0" x:Name="VersionList" HorizontalAlignment="Stretch" />
+    </Grid>
 </Page>
