--- a/BedrockBoot/Pages/DownloadPages/VersionsShowPages.xaml
+++ b/BedrockBoot/Pages/DownloadPages/VersionsShowPages.xaml
@@ -15,6 +15,7 @@
         <DataTemplate x:Key="VersionCardTemplate" x:DataType="jsonHandle:VersionInformation">
             <dev:SettingsCard
                 Margin="10,5,10,0"
+                Click="SettingsCard_Click"
                 Description="{x:Bind Date}"
                 Header="{x:Bind ID}"
                 IsClickEnabled="True"
