--- a/BedrockBoot/Pages/TaskPage.xaml
+++ b/BedrockBoot/Pages/TaskPage.xaml
@@ -3,13 +3,14 @@
     x:Class="BedrockBoot.Pages.TaskPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:BedrockBoot.Controls"
+    xmlns:controls="using:CommunityToolkit.WinUI.Controls"
+    xmlns:controls2="using:Riverside.Toolkit.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:BedrockBoot.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid>
-        <controls:TaskCard Height="512" />
+        <controls2:SettingsDisplayControl />
     </Grid>
 </Page>
