--- a/BedrockBoot/Pages/OOBEPage.xaml
+++ b/BedrockBoot/Pages/OOBEPage.xaml
@@ -9,7 +9,5 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Margin="0,48,0,0">
-        <Button Style="{ThemeResource InfoBarCloseButtonStyle}" Content="Button"/>
-    </Grid>
+    <Grid Margin="0,48,0,0" />
 </Page>
