--- a/BedrockBoot/Pages/DownloadPage.xaml
+++ b/BedrockBoot/Pages/DownloadPage.xaml
@@ -10,7 +10,7 @@
     xmlns:ui="using:CommunityToolkit.WinUI"
     mc:Ignorable="d">
 
-    <Grid Margin="40,48,40,0" Padding="0">
+    <Grid Margin="5,48,5,0" Padding="0">
         <Grid
             Height="80"
             MaxWidth="1000"
@@ -28,11 +28,9 @@
                 </BreadcrumbBar.ItemTemplate>
             </BreadcrumbBar>
         </Grid>
-        <ScrollViewer
-            MaxWidth="1000"
+
+        <Frame x:Name="SubPageFrame" 
             Margin="0,50,0,0"
-            HorizontalAlignment="Stretch">
-            <Frame x:Name="SubPageFrame" />
-        </ScrollViewer>
+            HorizontalAlignment="Stretch"/>
     </Grid>
 </Page>
