--- a/BedrockBoot/Pages/DownloadPages/VersionsShowPages.xaml
+++ b/BedrockBoot/Pages/DownloadPages/VersionsShowPages.xaml
@@ -14,60 +14,86 @@
     <Page.Resources>
         <DataTemplate x:Key="VersionCardTemplate" x:DataType="jsonHandle:VersionInformation">
             <dev:SettingsCard
-                Margin="10,5,10,0"
+                Margin="5,5,5,0"
                 Click="SettingsCard_Click"
                 Description="{x:Bind Date}"
                 Header="{x:Bind ID}"
                 IsClickEnabled="True"
                 Tag="{x:Bind}">
                 <dev:SettingsCard.HeaderIcon>
-                    <FontIcon Glyph="&#xE77B;" />
+                    <ImageIcon Source="/Assets/Release_Icon.png"
+                               Width="48" Height="48"/>
                 </dev:SettingsCard.HeaderIcon>
             </dev:SettingsCard>
         </DataTemplate>
     </Page.Resources>
     <Grid>
         <Grid>
-            <StackPanel
-                Margin="5"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Orientation="Horizontal">
-                <FontIcon
-                    Margin="4"
-                    FontSize="18"
-                    Foreground="Gray"
-                    Glyph="&#xE71C;" />
-                <TextBlock
-                    Margin="4"
-                    VerticalAlignment="Center"
-                    Foreground="Gray">
-                    过滤器
-                </TextBlock>
-
-                <controls:Segmented
-                    x:Name="VersionType"
+            <Grid HorizontalAlignment="Stretch"
+                  VerticalAlignment="Top" MaxWidth="1000">
+                <StackPanel
                     Margin="5"
-                    SelectedIndex="0"
-                    SelectionMode="Single"
-                    SelectionChanged="VersionType_OnSelectionChanged"
-                    >
-                    <controls:SegmentedItem Icon="{ui:FontIcon Glyph=&#xE7FC;}" ToolTipService.ToolTip="正式版" />
-                    <controls:SegmentedItem Icon="{ui:FontIcon Glyph=&#xE8A1;}" ToolTipService.ToolTip="预览版" />
-                    <controls:SegmentedItem Icon="{ui:FontIcon Glyph=&#xEA8D;}" ToolTipService.ToolTip="测试版" />
-                </controls:Segmented>
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    Orientation="Horizontal">
+                    <FontIcon
+                        Margin="4"
+                        FontSize="18"
+                        Foreground="Gray"
+                        Glyph="&#xE71C;" />
+                    <TextBlock
+                        Margin="6,0,6,0"
+                        VerticalAlignment="Center"
+                        Foreground="Gray">
+                        过滤器
+                    </TextBlock>
 
-            </StackPanel>
-            <Grid Margin="0,48,0,0">
+                    <controls:Segmented
+                        x:Name="VersionType"
+                        Margin="5"
+                        SelectedIndex="0"
+                        SelectionMode="Single"
+                        SelectionChanged="VersionType_OnSelectionChanged">
+
+                        <controls:SegmentedItem Icon="{ui:FontIcon Glyph=&#xE7FC;}" ToolTipService.ToolTip="正式版" />
+                        <controls:SegmentedItem Icon="{ui:FontIcon Glyph=&#xE8A1;}" ToolTipService.ToolTip="预览版" />
+                        <controls:SegmentedItem Icon="{ui:FontIcon Glyph=&#xEA8D;}" ToolTipService.ToolTip="测试版" />
+                    </controls:Segmented>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal"
+                            Margin="5"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Top">
+                    <AutoSuggestBox Height="32" MinWidth="200" MaxWidth="500"
+                             Margin="0,5,0,0"
+                             QueryIcon="Find"
+                             TextChanged="AutoSuggestBox_TextChanged"
+                             x:Name="SearchBox"
+                             PlaceholderText="搜索"
+                             VerticalAlignment="Center"></AutoSuggestBox>
+                </StackPanel>
+            </Grid>
+            <Grid Margin="0,64,0,10">
                 <ScrollViewer HorizontalAlignment="Stretch">
-                    <ItemsRepeater
-                        x:Name="VersionList"
-                        ItemTemplate="{StaticResource VersionCardTemplate}"
-                        ItemsSource="{x:Bind VersionItems, Mode=OneWay}">
-                        <ItemsRepeater.Layout>
-                            <StackLayout Spacing="5" />
-                        </ItemsRepeater.Layout>
-                    </ItemsRepeater>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1.5*"/>
+                            <!-- 主内容区域占70% -->
+                            <ColumnDefinition Width="7*" MaxWidth="1000" />
+                            <ColumnDefinition Width="1.5*"/>
+                        </Grid.ColumnDefinitions>
+                        <ItemsRepeater
+                            Grid.Column="1"
+                            HorizontalAlignment="Stretch"
+                            x:Name="VersionList"
+                            ItemTemplate="{StaticResource VersionCardTemplate}"
+                            ItemsSource="{x:Bind VersionItems, Mode=OneWay}"
+                            MaxWidth="1000">
+                            <ItemsRepeater.Layout>
+                                <StackLayout Spacing="5" />
+                            </ItemsRepeater.Layout>
+                        </ItemsRepeater>
+                    </Grid>
                 </ScrollViewer>
             </Grid>
         </Grid>
